syntax/tree-sitter-robine/test/corpus/bootstrap.txt
==================
Hello application
==================

module hello

fn main(console: Console) -> Unit ! { Console.Write } {
    console.write_line("Hello from Robine!")
}

---

(source_file
  (module_declaration
    name: (qualified_identifier
      (identifier)))
  (function_declaration
    name: (identifier)
    (parameter
      name: (identifier)
      type: (type_name
        (qualified_identifier
          (identifier))))
    return_type: (type_name
      (qualified_identifier
        (identifier)))
    (effect_row
      (qualified_identifier
        (identifier)
        (identifier)))
    body: (block
      result: (expression
        (call_expression
          function: (qualified_identifier
            (identifier)
            (identifier))
          argument: (expression
            (string)))))))

==================
Local binding
==================

module sample
fn answer() -> Int {
  let value: Int = 42;
  value
}

---

(source_file
  (module_declaration
    name: (qualified_identifier
      (identifier)))
  (function_declaration
    name: (identifier)
    return_type: (type_name
      (qualified_identifier
        (identifier)))
    body: (block
      (let_statement
        name: (identifier)
        type: (type_name
          (qualified_identifier
            (identifier)))
        value: (expression
          (integer)))
      result: (expression
        (identifier)))))

==================
Conditional expression
==================

module choice
fn choose(flag: Bool) -> Text {
  if flag { "yes" } else { "no" }
}

---

(source_file
  (module_declaration
    name: (qualified_identifier
      (identifier)))
  (function_declaration
    name: (identifier)
    (parameter
      name: (identifier)
      type: (type_name
        (qualified_identifier
          (identifier))))
    return_type: (type_name
      (qualified_identifier
        (identifier)))
    body: (block
      result: (expression
        (if_expression
          condition: (expression
            (identifier))
          consequence: (expression_block
            result: (expression
              (string)))
          alternative: (expression_block
            result: (expression
              (string))))))))

==================
Arithmetic precedence
==================

module math
fn answer() -> Bool {
  1 + 2 * 3 == 7
}

---

(source_file
  (module_declaration
    name: (qualified_identifier
      (identifier)))
  (function_declaration
    name: (identifier)
    return_type: (type_name
      (qualified_identifier
        (identifier)))
    body: (block
      result: (expression
        (binary_expression
          left: (expression
            (binary_expression
              left: (expression
                (integer))
              right: (expression
                (binary_expression
                  left: (expression
                    (integer))
                  right: (expression
                    (integer))))))
          right: (expression
            (integer)))))))

==================
Qualified module, import and public function
==================

module app.main
import app.math

pub fn answer() -> Int {
  app.math.answer()
}

---

(source_file
  (module_declaration
    name: (qualified_identifier
      (identifier)
      (identifier)))
  (import_declaration
    module: (qualified_identifier
      (identifier)
      (identifier)))
  (function_declaration
    name: (identifier)
    return_type: (type_name
      (qualified_identifier
        (identifier)))
    body: (block
      result: (expression
        (call_expression
          function: (qualified_identifier
            (identifier)
            (identifier)
            (identifier)))))))
